<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
            android:id="@+id/action_help"
            android:title="@string/help"
            android:icon="@drawable/ic_help"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_backup"
            android:title="@string/backup"
            android:icon="@drawable/ic_backup"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_setting"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>
</menu>