<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".firebase.auth.FirebaseUIFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/firebase" />

        <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firebaseui_title_text"
                android:theme="@style/ThemeOverlay.MyTitleText"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/status"
                style="@style/ThemeOverlay.MyTextDetail"
                android:text="@string/signed_out"
                android:textColor="@android:color/secondary_text_light"/>

        <TextView
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                tools:text="Firebase User ID: 123456789abc"
                android:textColor="@android:color/secondary_text_light"/>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_300"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="visible" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>
