<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExchangeFragment">


    <Button
            android:text="@string/generate_exchange_no"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btnGenerate"
            android:lines="2"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/received_exchange_no"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btnReceived"
            app:layout_constraintStart_toStartOf="parent"
            android:lines="2"/>

    <TextView
            android:text="@string/header_exchange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeader"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/grey_400"
            android:id="@+id/constraintLayout">

        <TextView
                android:text="@string/own"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/tvConnected2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/tvKey"
                android:layout_marginEnd="5dp"/>

        <TextView
                android:text="@string/unique_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/tvKey"
                android:textColor="@android:color/black"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"/>

        <TextView
                android:text="@string/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/tvName"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@+id/tvConnected"
                android:layout_marginStart="5dp"
                android:textSize="16sp"/>

        <TextView
                android:text="@string/connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="5dp"
                android:id="@+id/tvConnected"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/rvOdber"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>