<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layoutDatabase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DatabaseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutRoom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:text="@string/Database_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescription"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:text="@string/database_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/ivPlusRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/plus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            app:srcCompat="@drawable/ic_plus_gray" />

        <TextView
                android:text="@string/room_zero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/ivPlusRoom"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@+id/ivPlusRoom"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:id="@+id/tvRoom"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutDisk"
            app:layout_constraintTop_toBottomOf="@+id/layoutRoom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:text="@string/room_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitleRoom"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
                android:text="@string/room_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescriptionRoom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleRoom"
                android:layout_marginTop="10dp"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_plus_gray"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:id="@+id/ivPlusDisk"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionRoom"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/plus"/>

        <TextView
                android:text="@string/room_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlusRoom"
                app:layout_constraintStart_toEndOf="@+id/ivPlusDisk"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@+id/ivPlusDisk"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutFirebase"
            app:layout_constraintTop_toBottomOf="@+id/layoutDisk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp">

        <TextView
                android:text="@string/firebase_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitleFirebase"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
                android:text="@string/firebase_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescriptionFirebase"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleFirebase"
                android:layout_marginTop="10dp"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_plus_gray"
                android:id="@+id/ivPlusFirebase"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/minus"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionFirebase"
                android:layout_marginTop="10dp"
                />

        <TextView
                android:text="@string/firebase_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlusFirebase"
                app:layout_constraintStart_toEndOf="@+id/ivPlusFirebase"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@+id/ivPlusFirebase"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/layoutAbout"
            app:layout_constraintTop_toBottomOf="@+id/layoutFirebase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        <TextView
                android:text="@string/web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCopyright"
                android:text="@string/copyright"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/tvProgram"
                app:layout_constraintStart_toStartOf="@+id/tvProgram"
                app:layout_constraintEnd_toEndOf="@+id/tvProgram"/>

        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:srcCompat="@drawable/ic_calender"
                android:id="@+id/ivPyramid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="150dp"
                android:scaleType="centerCrop"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvProgram"
                android:text="@string/program"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPyramid"
                android:layout_marginTop="10dp"/>

        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCopyright"
                android:layout_marginTop="20dp"/>

        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_http"
                android:id="@+id/ibHttp"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/icon"/>

        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_email"
                android:id="@+id/ibEmail"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
