<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QRcodeActivity">

    <ImageView
            android:id="@+id/imgQRcode"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="qr_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"/>

    <Button
            android:text="@string/close"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnClose"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"/>

    <Button
            android:text="@string/share"
            android:layout_height="wrap_content"
            android:id="@+id/btnShare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="25dp"
            android:layout_width="125dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCode"
            app:layout_constraintTop_toBottomOf="@+id/imgQRcode"
            app:layout_constraintEnd_toEndOf="@+id/imgQRcode"
            app:layout_constraintStart_toStartOf="@+id/imgQRcode"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:text="@string/key"/>


</androidx.constraintlayout.widget.ConstraintLayout>